fix(spans): order span ids before chunking, and correct the delete contract
Review feedback, four findings.

The statement count was chunks x partitions rather than partitions. Span ids
reach deleteByIds in hash order, unrelated to time, so chunking them directly put
ids from every week the delete spans into every chunk and each chunk re-grouped
the same weeks. A delete covering W weeks in C chunks registered W*C mutations
where W would do, which breaches ClickHouse's number_of_mutations_to_delay and
number_of_mutations_to_throw ceilings and fails a cascade outright rather than
slowing it. The ids are now ordered by their embedded timestamp before chunking,
so each week is contiguous and only a week split by a chunk boundary costs a
second statement. It also confines the unbounded fallback to the final chunk,
since underivable ids sort last. chunkingDoesNotMultiplyStatementsByPartition
covers it and fails on the unordered form, verified by reverting the ordering.

The javadoc had the synchronicity backwards: it claimed the statement leaves the
mutation asynchronous, when lightweight_deletes_sync defaults to 2 - stricter
than the 1 the retention sweeps set - and the test helper a few lines away
already relied on that. The returned 0 is because ClickHouse reports no row count
for a lightweight delete, which is what was measured. Recorded with it is the
consequence that correction exposes: each statement waits for its mutation, so
sequential execution makes a wide cascade's wall time the sum of those waits,
which is what the ordering bounds. Lowering the setting would trade that for a
window where a replica still serves deleted rows, and is left undecided.

The legacy 32-bit wrap partition the derivation unions in can never name a real
spans partition - legacy spans is unpartitioned and spans_local_v2 was created
DateTime64(0) at 000115, unlike traces_local_v2, which carried a 32-bit id_at
between 000101 and 000114. One no-op statement per far-future id, recorded rathe